fix tab header linewrapping

--- a/src/layout/Tabs/Tabs.module.css
+++ b/src/layout/Tabs/Tabs.module.css
@@ -7,3 +7,6 @@
 .icon {
   width: var(--ds-size-6);
 }
+.tabHeader {
+  white-space: unset;
+}
